--- a/about.html
+++ b/about.html
@@ -5,32 +5,32 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
 
     <title>About Me</title>
+    <link rel="stylesheet" href="/css/bio.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header>
+    <header class="nav-bar">
       <h1>About Me</h1>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     </header>
 
     <hr />
 
-    <!-- Main Content -->
     <main>
       <p>
-        Hello! I'm learning HTML,css and java and created this To-Do List
-        project to organize tasks and improve productivity.<br />
+        Hello! my name is hnan and I'm learning HTML,css and java and created
+        this To-Do List project to organize tasks and improve productivity.<br />
         I enjoy coding, designing, and building simple tools to stay on track.
       </p>
     </main>
 
     <hr />
 
-    <!-- Footer -->
     <footer>
       <p>&copy; 2025 My Productive Day</p>
     </footer>
