--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
     <title>Contact</title>
+    <link rel="stylesheet" href="/css/bio.css" />
   </head>
   <body>
-    <!-- Header -->
-    <header>
+    <header class="nav-bar">
       <h1>Contact</h1>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     </header>
 
     <hr />
 
-    <!-- Main Content -->
     <main>
       <p>Feel free to reach out with questions or feedback!</p>
       <ul>
@@ -29,7 +29,6 @@
 
     <hr />
 
-    <!-- Footer -->
     <footer>
       <p>&copy; 2025 My Productive Day</p>
     </footer>
